--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                           data-appear-animation-delay="500"
                           data-plugin-options="{'minWindowWidth': 0}"
                         >
-                          Time to Play
+                          INTRODUCING KICKBUD
                         </h1>
                         <p
                           class="
@@ -286,8 +286,7 @@
                           data-plugin-animated-letters
                           data-plugin-options="{'startDelay': 1000, 'minWindowWidth': 0, 'animationSpeed': 30}"
                         >
-                          Kickbud is your perfect companion for an enjoyable
-                          evening.
+                          The buddy for your feet
                         </p>
                         <a
                           href="#shop"
@@ -481,10 +480,16 @@
                   data-appear-animation="fadeInUpShorter"
                   data-appear-animation-delay="400"
                 >
-                  To Kickbud is to keep the Kickbud off the floor. The Kickbud
-                  is aerodynamically designed to improve flight time and
-                  landing, making it easy for beginners. Improves foot-eye
-                  coordination, reflexes, first touches and mood
+                  Kickbud is the upgrade to the ancient game of shuttlecock. Kickbud is both a noun and a verb. To Kickbud is to keep the Kickbud off the floor. The Kickbud is aerodynamically designed to improve flight time and landing, making it easy for beginners. It is made of 4 feathers placed adjacently to each other, attached to a rubber pad. 
+                </p>
+                
+                
+                <p
+                  class="appear-animation"
+                  data-appear-animation="fadeInUpShorter"
+                  data-appear-animation-delay="400"
+                >
+                  Kickbud improves foot-eye coordination, reflexes, first touches and mood. 
                 </p>
                 <!-- <a
                   href="#"
@@ -550,23 +555,33 @@
                 >
                   subtitle
                 </p> -->
-                <p>
+                <p class="appear-animation"
+                  data-appear-animation="fadeInUpShorter"
+                  data-appear-animation-delay="400"> 
                   The aim of the game is to keep the Kickbud off the floor. The
                   game can be played solo, with a partner, or with a team of up
                   to 8 people.
                 </p>
-                <p>
+                <p class="appear-animation"
+                  data-appear-animation="fadeInUpShorter"
+                  data-appear-animation-delay="400">
                   Solo players can juggle the Kickbud and show off their
                   freestyle skills. 2-4 players can group themselves and play
                   competitively to see who lets it drop first. 2-8 players can
                   stand in a circle to freestyle and keep the Kickbud in air for
                   as long as possible.
                 </p>
-                <ul>
+                <ul class="appear-animation"
+                  data-appear-animation="fadeInUpShorter"
+                  data-appear-animation-delay="400">
                   <li><strong>Things to carry</strong> – Kickbud</li>
-                  <li><strong>Where to play</strong> – Indoor or Outdoor</li>
+                  <li><strong>Where to play</strong> – Basement, Terrace, Living room, Soccer field, Park, Badminton Court… Basically ANYWHERE. Avoid extremely windy locations for a better experience</li>
+                  <li><strong>Pro tip</strong> – Use the inside of your heel as a point of contact with the Kickbud. It helps the player have more control over the direction of the Kickbud.</li>
                 </ul>
-                <p>PS – Avoid extremely windy places</p>
+                <p class="appear-animation"
+                  data-appear-animation="fadeInUpShorter"
+                  data-appear-animation-delay="400">PS - The game is young, and there are no set rules. Feel free to mix it up and experiment with different ways of playing Kickbud.
+</p>
 
                 <!-- <a
                   href="#"
