--- a/index.html
+++ b/index.html
@@ -574,14 +574,16 @@
                 <ul class="appear-animation"
                   data-appear-animation="fadeInUpShorter"
                   data-appear-animation-delay="400">
-                  <li><strong>Things to carry</strong> – Kickbud</li>
-                  <li><strong>Where to play</strong> – Basement, Terrace, Living room, Soccer field, Park, Badminton Court… Basically ANYWHERE. Avoid extremely windy locations for a better experience</li>
+                  <li><strong>Things to carry</strong> – Kickbud.</li>
+                  <li><strong>Where to play</strong> – Basement, Terrace, Living room, Soccer field, Park, Badminton Court… Basically ANYWHERE. Avoid extremely windy locations for a better experience.</li>
                   <li><strong>Pro tip</strong> – Use the inside of your heel as a point of contact with the Kickbud. It helps the player have more control over the direction of the Kickbud.</li>
                 </ul>
                 <p class="appear-animation"
                   data-appear-animation="fadeInUpShorter"
-                  data-appear-animation-delay="400">PS - The game is young, and there are no set rules. Feel free to mix it up and experiment with different ways of playing Kickbud.
-</p>
+                  data-appear-animation-delay="400"><strong>PS - The game is young, and there are no set rules. Feel free to mix it up and experiment with different ways of playing Kickbud.
+                  </strong>
+               
+                </p>
 
                 <!-- <a
                   href="#"
@@ -728,9 +730,20 @@
                   </p>
 
                   <p class="text-3-5 mb-3">
-                    The Kickbud arrives in an easy to carry package. Play with
-                    friends, family or teammates anywhere, anytime.
+                    Kickbud is the newest most fun sport in town! 
                   </p>
+                  
+                  <ul class="appear-animation"
+                  data-appear-animation="fadeInUpShorter"
+                  data-appear-animation-delay="400">
+                  <li>The Kickbud arrives in an easy to carry package.</li>
+                  <li>Play with friends, family or teammates anywhere, anytime.</li>
+                  <li>Juggle solo.</li>
+                  <li>Freestyle or compete with friends or family.</li>
+                  <li>Can be played both indoors and outdoors.</li>
+                  <li>Improves foot-eye coordination, reflexes and first-touch.</li>
+                  <li>Most ideal for soccer enthusiasts and active families.</li>
+                  </ul>
 
                   <!-- <ul class="list list-unstyled text-2">
                     <li class="mb-0">
@@ -780,8 +793,8 @@
 
         <div class="row mt-5 mb-5" style="padding: 4rem;">
           <div class="col-lg-4 pe-lg-0">
-            <h2 class="text-color-dark font-weight-semibold text-6 line-height-3 mb-3">Check out what are clients are saying about us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed imperdiet libero id nisi euismod, sed porta est consectetur. Sed imperdiet ibero id nisi euismod, sed porta est consectetur.</p>
+            <h2 class="text-color-dark font-weight-semibold text-6 line-height-3 mb-3">CHECK OUT WHAT THE PLAYERS THINK:</h2>
+            <p>We asked some of our friends and family to try out the Kickbud, and here’s what they have to say:</p>
           </div>
           <div class="col-lg-8 ps-lg-4">
             <div class="owl-carousel custom-carousel-style-1 custom-carousel-dots-style-1" data-plugin-options="{'responsive': {'0': {'items': 1}, '479': {'items': 1}, '979': {'items': 2}, '1199': {'items': 2}}, 'margin': 0, 'loop': true, 'dots': true, 'nav': false, 'autoplay': true}">
