--- a/index.html
+++ b/index.html
@@ -1208,8 +1208,8 @@
               </h2>
               <span class="d-block text-color-dark mb-2">Need Assistance?</span>
               <p class="font-weight-light px-lg-3 mb-0">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-                nec vestibulum magna, et dapib.
+                <a href="mailto:kickbudsports@gmail.com">Mail</a> or 
+                <a href="tel:8056284044">call</a> us and we will be happy to answer any of your questions.
               </p>
             </div>
             <div class="col-sm-10 col-md-9 col-lg-4 text-center mb-5 mb-lg-0">
@@ -1228,9 +1228,7 @@
               </h2>
               <span class="d-block text-color-dark mb-2">Safe & Fast</span>
               <p class="font-weight-light px-lg-3 mb-0">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-                nec vestibulum magna, et dapibus lacus. Lorem ipsum dolor sit
-                amet.
+                XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
               </p>
             </div>
             <div class="col-sm-10 col-md-9 col-lg-4 text-center">
@@ -1249,8 +1247,7 @@
               </h2>
               <span class="d-block text-color-dark mb-2">Easy & Free</span>
               <p class="font-weight-light px-lg-3 mb-0">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-                nec vestibulum magna, et dapib.
+                If you receive a defective piece of Kickbud, you can claim an exchange or refund through Shiprocket. We will accept the refund request up to 3 days after you receive the product - provided it is in a resalable condition with the packaging intact.
               </p>
             </div>
           </div>
