--- a/index.html
+++ b/index.html
@@ -573,7 +573,8 @@
                 </p>
                 <ul class="appear-animation"
                   data-appear-animation="fadeInUpShorter"
-                  data-appear-animation-delay="400">
+                  data-appear-animation-delay="400"
+                  style="text-align: left;">
                   <li><strong>Things to carry</strong> – Kickbud.</li>
                   <li><strong>Where to play</strong> – Basement, Terrace, Living room, Soccer field, Park, Badminton Court… Basically ANYWHERE. Avoid extremely windy locations for a better experience.</li>
                   <li><strong>Pro tip</strong> – Use the inside of your heel as a point of contact with the Kickbud. It helps the player have more control over the direction of the Kickbud.</li>
