--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 "
                 data-dynamic-height="['650px','650px','650px','550px','500px']"
                 style="
-                  background-image: url(https://source.unsplash.com/random);
+                  background-image: url(kickbud-webres/five-kickbuds-with-packaging.jpg);
                   background-size: cover;
                   background-position: center;
                 "
@@ -643,16 +643,16 @@
                       <img
                         alt=""
                         class="img-fluid"
-                        src="product.jpeg"
-                        data-zoom-image="product.jpg"
+                        src="kickbud-webres/kickbud-product-image.jpg"
+                        data-zoom-image="kickbud-webres/kickbud-product-image.jpg"
                       />
                     </div>
                     <div>
                       <img
                         alt=""
                         class="img-fluid"
-                        src="img/demos/product-landing/product-carousel-1-2.jpg"
-                        data-zoom-image="img/demos/product-landing/product-carousel-1-2.jpg"
+                        src="kickbud-webres/kickbud-with-packaging.jpg"
+                        data-zoom-image="kickbud-webres/kickbud-with-packaging.jpg"
                       />
                     </div>
                     <div>
