--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
                         data-item-price="349"
                         data-item-url="https://kickbud.netlify.app/"
                         data-item-name="Kickbud"
-                        data-item-image="https://i.ibb.co/gzG19s6/product.jpg"
+                        data-item-image="https://i.ibb.co/qCWfdsJ/kickbud-product-image.jpg"
                         data-item-description="The Kickbud arrives in an easy to carry package. Play with friends, family or teammates anywhere, anytime. "
                       >
                         Buy Now
@@ -1309,14 +1309,7 @@
                     ><i class="fab fa-instagram"></i
                   ></a>
                 </li>
-                <li class="social-icons-linkedin">
-                  <a
-                    href="http://www.linkedin.com/"
-                    target="_blank"
-                    title="Linkedin"
-                    ><i class="fab fa-linkedin-in"></i
-                  ></a>
-                </li>
+                
               </ul>
             </div>
             <div class="col-lg-4 col-xl-3 offset-xl-1">
@@ -1333,8 +1326,7 @@
                 <i class="fab fa-cc-visa"></i>
                 <i class="fab fa-cc-mastercard"></i>
                 <i class="fab fa-cc-stripe"></i>
-                <i class="fab fa-cc-paypal"></i>
-                <i class="fab fa-cc-apple-pay"></i>
+                
               </div>
             </div>
           </div>
