added hero and customers' images

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 "
                 data-dynamic-height="['650px','650px','650px','550px','500px']"
                 style="
-                  background-image: url(kickbud-webres/five-kickbuds-with-packaging.jpg);
+                  background-image: url(kickbud-webres/person-playing-jianzi-outdoors.jpg);
                   background-size: cover;
                   background-position: center;
                 "
@@ -780,7 +780,7 @@
                   </blockquote>
                   <div class="testimonial-author">
                     <div class="testimonial-author-thumbnail">
-                      <img src="local-images/customers/mohit-shah.png" class="img-fluid rounded-circle" alt="">
+                      <img src="local-images/customers/mohit-shah.png" class="img-fluid rounded-circle" alt="Image of a happy customer">
                     </div>
                     <p><strong class="font-weight-semibold text-4 mb-1">Mohit Shah</strong></p>
                   </div>
@@ -793,9 +793,9 @@
                   </blockquote>
                   <div class="testimonial-author">
                     <div class="testimonial-author-thumbnail">
-                      <img src="img/clients/client-2.jpg" class="img-fluid rounded-circle" alt="">
+                      <img src="local-images/customers/bhavish-jain.jpg" class="img-fluid rounded-circle" alt="Image of a happy customer">
                     </div>
-                    <p><strong class="font-weight-semibold text-4 mb-1">Kaushalya Rathi</strong></p>
+                    <p><strong class="font-weight-semibold text-4 mb-1">Bhavish Jain</strong></p>
                   </div>
                 </div>
               </div>
@@ -807,7 +807,7 @@
                   </blockquote>
                   <div class="testimonial-author">
                     <div class="testimonial-author-thumbnail">
-                      <img src="img/clients/client-3.jpg" class="img-fluid rounded-circle" alt="">
+                      <img src="local-images/customers/harsh-mutha.jpg" class="img-fluid rounded-circle" alt="Image of a happy customer">
                     </div>
                     <p><strong class="font-weight-semibold text-4 mb-1">Harsh Mutha</strong></p>
                   </div>
@@ -820,7 +820,7 @@
                   </blockquote>
                   <div class="testimonial-author">
                     <div class="testimonial-author-thumbnail">
-                      <img src="local-images/customers/alabhya-jindal.png" class="img-fluid rounded-circle" alt="">
+                      <img src="local-images/customers/alabhya-jindal.png" class="img-fluid rounded-circle" alt="Image of a happy customer">
                     </div>
                     <p><strong class="font-weight-semibold text-4 mb-1">Alabhya Jindal</strong></p>
                   </div>
