--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
                   </blockquote>
                   <div class="testimonial-author">
                     <div class="testimonial-author-thumbnail">
-                      <img src="local-images/customers/bhavish-jain.jpg" class="img-fluid rounded-circle" alt="Image of a happy customer">
+                      <img src="local-images/customers/bhavish-jain.jpeg" class="img-fluid rounded-circle" alt="Image of a happy customer">
                     </div>
                     <p><strong class="font-weight-semibold text-4 mb-1">Bhavish Jain</strong></p>
                   </div>
@@ -807,7 +807,7 @@
                   </blockquote>
                   <div class="testimonial-author">
                     <div class="testimonial-author-thumbnail">
-                      <img src="local-images/customers/harsh-mutha.jpg" class="img-fluid rounded-circle" alt="Image of a happy customer">
+                      <img src="local-images/customers/harsh-mutha.jpeg" class="img-fluid rounded-circle" alt="Image of a happy customer">
                     </div>
                     <p><strong class="font-weight-semibold text-4 mb-1">Harsh Mutha</strong></p>
                   </div>
