--- a/index.html
+++ b/index.html
@@ -510,8 +510,8 @@
               <div class="col-lg-6 text-center">
                 <img
                   class="img-fluid"
-                  src="https://source.unsplash.com/random/1000x1000"
-                  alt=""
+                  src="kickbud-webres/five-kickbuds-with-packaging.jpg"
+                  alt="Five Kickbuds with their packaging on a white background"
                   width="500"
                   height="500"
                 />
@@ -528,8 +528,8 @@
               <div class="col-lg-6 text-center">
                 <img
                   class="img-fluid"
-                  src="https://source.unsplash.com/random/1000x1000"
-                  alt=""
+                  src="kickbud-webres/four-players-playing-kickbud-in-a-park.jpg"
+                  alt="Four players playing Kickbud in a park"
                   width="500"
                   height="500"
                 />
