--- a/index.html
+++ b/index.html
@@ -1183,8 +1183,7 @@
               </h2>
               <span class="d-block text-color-dark mb-2">Need Assistance?</span>
               <p class="font-weight-light px-lg-3 mb-0">
-                <a href="mailto:kickbudsports@gmail.com">Mail</a> or 
-                <a href="tel:8056284044">call</a> us and we will be happy to answer any of your questions.
+                Mail us on kickbudsports@gmail.com or call us at 8056284044 and we will be happy to assist you.
               </p>
             </div>
             <div class="col-sm-10 col-md-9 col-lg-4 text-center mb-5 mb-lg-0">
@@ -1203,7 +1202,7 @@
               </h2>
               <span class="d-block text-color-dark mb-2">Safe & Fast</span>
               <p class="font-weight-light px-lg-3 mb-0">
-                XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+                We use the best practices when it comes to customers and buyers’ safety.
               </p>
             </div>
             <div class="col-sm-10 col-md-9 col-lg-4 text-center">
@@ -1266,7 +1265,7 @@
                   <a
                     href="#"
                     class="text-decoration-none text-color-hover-primary"
-                    >Order Tracking</a
+                    >Return Policy</a
                   >
                 </li>
                 <li class="line-height-3 mt-2 mt-sm-0 mb-0">
