--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,9 @@
         </section> -->
 
         <!-- GALLERY -->
-        <section
+      
+      
+<!--         <section
           class="section section-height-3 bg-color-grey-scale-1 border-0 m-0"
         >
           <div class="container pt-2">
@@ -1163,7 +1165,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
 
         <div class="container">
           <div class="row justify-content-center py-5 my-4">
@@ -1292,17 +1294,17 @@
                   mb-0
                 "
               >
-                <li class="social-icons-facebook">
+<!--                 <li class="social-icons-facebook">
                   <a
                     href="http://www.facebook.com/"
                     target="_blank"
                     title="Facebook"
                     ><i class="fab fa-facebook-f"></i
                   ></a>
-                </li>
+                </li> -->
                 <li class="social-icons-instagram">
                   <a
-                    href="http://www.twitter.com/"
+                    href="https://www.instagram.com/kickbudsports/"
                     target="_blank"
                     title="Instagram"
                     ><i class="fab fa-instagram"></i
