--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 	      
 	    <div class="video-wrap">
   
-    <iframe width="560" height="315" src="//player.vimeo.com/video/" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="kickbud.mp4" frameborder="0" allowfullscreen></iframe>
   
   </div>
         
