--- a/index.html
+++ b/index.html
@@ -1414,7 +1414,18 @@
       hidden
       id="snipcart"
       data-api-key="ZDIyMzAzY2MtM2JkMy00YjNmLWFhZDQtNDdhYmQ3NzljZDlmNjM3NzEwOTc3MTczMzcxODU2"
-    ></div>
+    >
+	<billing section="top">
+  <fieldset class="snipcart-form__set">
+    <div class="snipcart-form__field">
+      <snipcart-label class="snipcart__font-tiny" for="phone"
+        >Phone Number</snipcart-label
+      >
+      <snipcart-input name="phone"></snipcart-input>
+    </div>
+  </fieldset>
+</billing>
+	</div>
   <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.2.2/default/snipcart.css" />
 <script async src="https://cdn.snipcart.com/themes/v3.2.2/default/snipcart.js"></script>
 <div id="snipcart" data-config-modal-style="side" data-api-key="ZDIyMzAzY2MtM2JkMy00YjNmLWFhZDQtNDdhYmQ3NzljZDlmNjM3NzEwOTc3MTczMzcxODU2" hidden></div>
