--- a/index.html
+++ b/index.html
@@ -1425,6 +1425,18 @@
     </div>
   </fieldset>
 </billing>
+	    
+	    <billing section="bottom">
+    <fieldset class="snipcart-form__set">
+        <div class="snipcart-form__field">
+            <snipcart-label class="snipcart__font--tiny" for="vatNumber">
+                VAT Number
+            </snipcart-label>
+            <snipcart-input name="vatNumber"></snipcart-input>
+        </div>
+    </fieldset>
+</billing>
+	    
 	</div>
   <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.2.2/default/snipcart.css" />
 <script async src="https://cdn.snipcart.com/themes/v3.2.2/default/snipcart.js"></script>
