video in lieu of iframe

--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 	      
 	    <div class="video-wrap">
   
-    <iframe width="560" height="315" src="kickbud.mp4" frameborder="0" allowfullscreen></iframe>
+    <video width="560" height="315" src="kickbud.mp4"></video>
   
   </div>
         
