--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
 	      
 	    <div class="video-wrap">
   
-    <video width="560" height="315" src="kickbud.mp4"></video>
+    <iframe width="560" height="315" src="kickbud.mp4" frameborder="0" allowfullscreen sandbox></iframe>
   
   </div>
         
