--- a/index.html
+++ b/index.html
@@ -1087,7 +1087,7 @@
 	<billing section="bottom">
     <fieldset class="snipcart-form__set">
         <div class="snipcart-form__field">
-            <snipcart-label class="snipcart__font--tiny" for="phone">
+            <snipcart-label class="snipcart__font--tiny" for="phone" required>
                 Phone Number
             </snipcart-label>
             <snipcart-input name="phone"></snipcart-input>
