--- a/index.html
+++ b/index.html
@@ -1087,10 +1087,10 @@
 	<billing section="bottom">
     <fieldset class="snipcart-form__set">
         <div class="snipcart-form__field">
-            <snipcart-label class="snipcart__font--tiny" for="phone" required>
+            <snipcart-label class="snipcart__font--tiny" for="phone">
                 Phone Number
             </snipcart-label>
-            <snipcart-input name="phone"></snipcart-input>
+            <snipcart-input name="phone" required></snipcart-input>
         </div>
     </fieldset>
 </billing>
