--- a/index.html
+++ b/index.html
@@ -951,7 +951,7 @@
               >
                 <li class="line-height-3 mb-0">
                   <a
-                    href="#"
+                    href="faq.html"
                     class="text-decoration-none text-color-hover-primary"
                     >Help & FAQs</a
                   >
