--- a/faq.html
+++ b/faq.html
@@ -427,6 +427,7 @@
                     btn-px-5 btn-py-2
                     buy-button
                   "
+                  style="margin-top: 30px"
                   >Shop</a
                 >
               </div>
@@ -469,14 +470,14 @@
                   "
                 >
                   <a
-                    href="#"
+                    href="return.html"
                     class="text-decoration-none text-color-hover-primary"
                     >Return Policy</a
                   >
                 </li>
                 <li class="line-height-3 mt-2 mt-sm-0 mb-0">
                   <a
-                    href="#"
+                    href="shipping.html"
                     class="text-decoration-none text-color-hover-primary"
                     >Shipping & Delivery</a
                   >
