--- a/faq.html
+++ b/faq.html
@@ -418,6 +418,12 @@
                     </div>
                   </div>
                 </div>
+
+                <p>
+                  If you have any further queries then you can reach out to us
+                  on kickbudsports@gmail.com or call us at 8056284044 and we
+                  will be happy to assist you.
+                </p>
                 <a
                   href="https://kickbud.in/index.html#shop"
                   class="
