--- a/faq.html
+++ b/faq.html
@@ -419,9 +419,13 @@
                   </div>
                 </div>
 
-                <p>
+                <p style="margin-top: 15px">
                   If you have any further queries then you can reach out to us
-                  on kickbudsports@gmail.com or call us at 8056284044 and we
+                  on
+                  <a href="mailto:kickbudsports@gmail.com"
+                    >kickbudsports@gmail.com</a
+                  >
+                  or call us at <a href="tel:8056284044">80562 84044</a> and we
                   will be happy to assist you.
                 </p>
                 <a
@@ -433,7 +437,6 @@
                     btn-px-5 btn-py-2
                     buy-button
                   "
-                  style="margin-top: 30px"
                   >Shop</a
                 >
               </div>
