--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@
               </h2>
               <span class="d-block text-color-dark mb-2">Easy & Free</span>
               <p class="font-weight-light px-lg-3 mb-0">
-                If you receive a defective piece of Kickbud, you can claim an exchange or refund through Shiprocket. We will accept the refund request up to 3 days after you receive the product - provided it is in a resalable condition with the packaging intact.
+                We have a flexible return policy that allows you to return the product up to 3 days after receiving it.
               </p>
             </div>
           </div>
