--- a/faq.html
+++ b/faq.html
@@ -420,13 +420,13 @@
                 </div>
 
                 <p style="margin-top: 15px">
-                  If you have any further queries then you can reach out to us
+                  If you have any further queries then please reach out to us
                   on
                   <a href="mailto:kickbudsports@gmail.com"
                     >kickbudsports@gmail.com</a
                   >
                   or call us at <a href="tel:8056284044">80562 84044</a> and we
-                  will be happy to assist you.
+                  will be happy to help you!
                 </p>
                 <a
                   href="https://kickbud.in/index.html#shop"
