--- a/index.html
+++ b/index.html
@@ -969,7 +969,7 @@
                   <a
                     href="#"
                     class="text-decoration-none text-color-hover-primary"
-                    >Shipping & Delivery</a
+                    >Shipping Policy</a
                   >
                 </li>
               </ul>
