--- a/faq.html
+++ b/faq.html
@@ -488,7 +488,7 @@
                   <a
                     href="shipping.html"
                     class="text-decoration-none text-color-hover-primary"
-                    >Shipping & Delivery</a
+                    >Shipping Policy</a
                   >
                 </li>
               </ul>
