--- a/index.html
+++ b/index.html
@@ -960,14 +960,14 @@
                   "
                 >
                   <a
-                    href="#"
+                    href="return.html"
                     class="text-decoration-none text-color-hover-primary"
                     >Return Policy</a
                   >
                 </li>
                 <li class="line-height-3 mt-2 mt-sm-0 mb-0">
                   <a
-                    href="#"
+                    href="shipping.html"
                     class="text-decoration-none text-color-hover-primary"
                     >Shipping Policy</a
                   >
