--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <title>Kickbud</title>
+    <title>Kickbud | FAQs</title>
 
     <meta name="keywords" content="kickbud" />
     <meta
