--- a/return.html
+++ b/return.html
@@ -248,9 +248,8 @@
               </p>
               <h3>Return Timeline</h3>
               <p>
-                We’ll accept return requests for items that are unopened,
-                unused, with the original tags still intact. The product(s) must
-                be in their original packaging, if applicable, in the same
+                We’ll accept return requests for items that are unused, with the original tags still intact. The product(s) must
+                be in their original packaging, in the same
                 condition it was received.
               </p>
               <p>
