Razorpay in lieu of Snipcart

--- a/index.html
+++ b/index.html
@@ -85,11 +85,7 @@
     <!-- Head Libs -->
     <script src="vendor/modernizr/modernizr.min.js"></script>
 
-    <!-- Snipcart -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.snipcart.com/themes/v3.2.2/default/snipcart.css"
-    />
+    
   </head>
   <body data-plugin-scroll-spy data-plugin-options="{'target': '#header'}">
     <!-- NAV + HERO -->
@@ -181,8 +177,8 @@
                       "
                     >
                       <a
-                        href="#"
-                        class="header-nav-features-toggle snipcart-checkout"
+                        href="https://rzp.io/l/vPTTcrwWE"
+                        class="header-nav-features-toggle"
                       >
                         <img
                           src="img/icons/icon-cart.svg"
@@ -191,7 +187,7 @@
                           class="header-nav-top-icon-img"
                         />
                         <span class="cart-info">
-                          <span class="cart-qty snipcart-items-count">0</span>
+                          <span class="cart-qty">0</span>
                         </span>
                       </a>
                       <div
@@ -615,7 +611,7 @@
                     enctype="multipart/form-data"
                     method="post"
                     class="cart"
-                    action="shop-cart.html"
+                    action="https://rzp.io/l/vPTTcrwWE"
                   >
                    
                       <button
@@ -626,14 +622,7 @@
                           text-3-5
                           btn-px-5 btn-py-2
                           buy-button
-                          snipcart-add-item
                         "
-                        data-item-id="1"
-                        data-item-price="349"
-                        data-item-url="https://kickbud.in/"
-                        data-item-name="Kickbud"
-                        data-item-image="https://i.ibb.co/qCWfdsJ/kickbud-product-image.jpg"
-                        data-item-description="The Kickbud arrives in an easy to carry package. Play with friends, family or teammates anywhere, anytime."
                       >
                         Buy Now
                       </button>
@@ -1074,20 +1063,7 @@
     <script src="js/examples/examples.image360.js"></script>
     <script src="js/examples/examples.gallery.js"></script>
 
-    <!-- Snipcart -->
-    <script async src="https://cdn.snipcart.com/themes/v3.2.2/default/snipcart.js"></script>
-    <div hidden id="snipcart" data-api-key="ZDIyMzAzY2MtM2JkMy00YjNmLWFhZDQtNDdhYmQ3NzljZDlmNjM3NzEwOTc3MTczMzcxODU2">
-	<billing section="bottom">
-    <fieldset class="snipcart-form__set">
-        <div class="snipcart-form__field">
-            <snipcart-label class="snipcart__font--tiny" for="phone">
-                Phone Number
-            </snipcart-label>
-            <snipcart-input name="phone" required></snipcart-input>
-        </div>
-    </fieldset>
-</billing>
-	</div>
+   
 
     <!-- Ionicons -->
 
