Replaced Razorpay link

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                       "
                     >
                       <a
-                        href="https://rzp.io/l/vPTTcrwWE"
+                        href="https://pages.razorpay.com/pl_IJ7TxeNtflP1zE/view"
                         class="header-nav-features-toggle"
                       >
                         <img
@@ -611,7 +611,7 @@
                     enctype="multipart/form-data"
                     method="post"
                     class="cart"
-                    action="https://rzp.io/l/vPTTcrwWE"
+                    action="https://pages.razorpay.com/pl_IJ7TxeNtflP1zE/view"
                   >
                    
                       <button
