Cart link leads to shop section

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                       "
                     >
                       <a
-                        href="https://pages.razorpay.com/pl_IJ7TxeNtflP1zE/view"
+                        href="#shop"
                         class="header-nav-features-toggle"
                       >
                         <img
@@ -186,9 +186,7 @@
                           alt=""
                           class="header-nav-top-icon-img"
                         />
-                        <span class="cart-info">
-                          <span class="cart-qty">0</span>
-                        </span>
+                        
                       </a>
                       <div
                         class="header-nav-features-dropdown"
