--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
                   <!-- Disabling theme's cart -->
 
-                  <div
+                  <!-- <div
                     class="
                       header-nav-features
                       header-nav-features-no-border
@@ -190,7 +190,7 @@
                       </a>
                       
                     </div>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
