--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@
                   <a
                     href="faq.html"
                     class="text-decoration-none text-color-hover-primary"
-                    >Help & FAQs</a
+                    >FAQs</a
                   >
                 </li>
                 <li
@@ -956,14 +956,37 @@
                   <a
                     href="return.html"
                     class="text-decoration-none text-color-hover-primary"
-                    >Return Policy</a
+                    >Returns</a
                   >
                 </li>
                 <li class="line-height-3 mt-2 mt-sm-0 mb-0">
                   <a
                     href="shipping.html"
                     class="text-decoration-none text-color-hover-primary"
-                    >Shipping Policy</a
+                    >Shipping</a
+                  >
+                </li>
+                <li
+                  class="
+                    line-height-3
+                    border border-top-0 border-bottom-0
+                    px-sm-3
+                    mx-sm-3
+                    mt-2 mt-sm-0
+                    mb-0
+                  "
+                >
+                  <a
+                    href="privacy.html"
+                    class="text-decoration-none text-color-hover-primary"
+                    >Privacy</a
+                  >
+                </li>
+                <li class="line-height-3 mt-2 mt-sm-0 mb-0">
+                  <a
+                    href="tos.html"
+                    class="text-decoration-none text-color-hover-primary"
+                    >Terms of Service</a
                   >
                 </li>
               </ul>
