--- a/shipping.html
+++ b/shipping.html
@@ -225,10 +225,7 @@
                   font-weight-medium
                   text-8
                   mb-5
-                  appear-animation
                 "
-                data-appear-animation="fadeInRightShorterPlus"
-                data-appear-animation-delay="100"
                 style="text-align: left"
               >
                 Shipping Policy
@@ -298,7 +295,7 @@
                   <a
                     href="faq.html"
                     class="text-decoration-none text-color-hover-primary"
-                    >Help & FAQs</a
+                    >FAQs</a
                   >
                 </li>
                 <li
@@ -314,14 +311,37 @@
                   <a
                     href="return.html"
                     class="text-decoration-none text-color-hover-primary"
-                    >Return Policy</a
+                    >Returns</a
                   >
                 </li>
                 <li class="line-height-3 mt-2 mt-sm-0 mb-0">
                   <a
                     href="#"
                     class="text-decoration-none text-color-hover-primary"
-                    >Shipping Policy</a
+                    >Shipping</a
+                  >
+                </li>
+                <li
+                  class="
+                    line-height-3
+                    border border-top-0 border-bottom-0
+                    px-sm-3
+                    mx-sm-3
+                    mt-2 mt-sm-0
+                    mb-0
+                  "
+                >
+                  <a
+                    href="privacy.html"
+                    class="text-decoration-none text-color-hover-primary"
+                    >Privacy</a
+                  >
+                </li>
+                <li class="line-height-3 mt-2 mt-sm-0 mb-0">
+                  <a
+                    href="tos.html"
+                    class="text-decoration-none text-color-hover-primary"
+                    >Terms of Service</a
                   >
                 </li>
               </ul>
