--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   <div class="header-logo">
                     <a href="index.html">
                       <img
-                        alt="Porto"
+                        alt="Kickbud"
                         width="189"
                         height="46"
                         data-sticky-width="189"
