--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                           data-plugin-animated-letters
                           data-plugin-options="{'startDelay': 1000, 'minWindowWidth': 0, 'animationSpeed': 30}"
                         >
-                          The buddy for your feet
+                          The Foot Shuttlecock
                         </p>
                         <a
                           href="#shop"
