--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
     <!-- Vendor CSS -->
     <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css" />
     <link rel="stylesheet" href="vendor/animate/animate.compat.css" />
     <link
@@ -81,6 +82,7 @@
 
     <!-- Theme Custom CSS -->
     <link rel="stylesheet" href="css/custom.css" />
+    <link src="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Head Libs -->
     <script src="vendor/modernizr/modernizr.min.js"></script>
@@ -149,6 +151,14 @@
                           <li>
                             <a href="#shop">Shop</a>
                           </li>
+
+                          <li>
+                            <a href="#info">Info</a>
+                            <ul class="dropdown">
+                              <li><a href="#" style="color: white;"><span>Buy kickbud online</span></a></li>
+                            </ul>
+                          </li>
+                          <li style="padding-top: 15px;"><span class="border-first-button"><a href="tel:80562 84044">Call: 80562 84044</a></span></li>
                         </ul>
                       </nav>
                     </div>
@@ -1103,5 +1113,11 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <div id="mybutton" style="width:100%;z-index:99!important">
+      <a href="tel:80562 84044">
+      <button class="button1" style="text-align:center;font-weight:400;width:100%">Click here to Call Me</button></a>
+    </div>
+    <div class="icon-bar">
+      <a href="https://wa.me/918056284044"  target="_blank" class="facebook"><i class="fab fa-whatsapp"></i></a></div>
   </body>
 </html>
